@@ -1,3 +1,7 @@
+2348 [x264] vbv enhancements
+            - vbv values are shown in red if the values are too high or not limited
+            - as too high values are also logged by x264 as a warning the MeGUI log warning has been removed
+            - fixed not applying proper vbv values if only changing the AVC profile
 2347 [Log] improved logging - console output is added to the log immediately
 2346 [HD Streams Extractor] select audio/subtitle tracks without language tag by default
 2345 [MP4 Muxer] revert r2299 (allow Nero & Apple Chapters styles muxing for better interoperability with players)
